<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/x"/>

    <TextView
        android:id="@+id/player1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:hint="@string/player_1"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:textColor="@color/DarkGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/player2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:hint="@string/player_2"
        android:padding="5dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/DarkGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/o"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/o"/>

    <Button
        android:id="@+id/button01"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/button00"
        app:layout_constraintTop_toBottomOf="@+id/feedback"/>

    <Button
        android:id="@+id/button02"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button01"
        app:layout_constraintLeft_toRightOf="@+id/button01"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/button00"
        app:layout_constraintTop_toBottomOf="@+id/button00"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button10"
        app:layout_constraintLeft_toRightOf="@+id/button10"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button11"
        app:layout_constraintLeft_toRightOf="@+id/button11"/>

    <Button
        android:id="@+id/button20"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button10"/>

    <Button
        android:id="@+id/button21"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button20"
        app:layout_constraintLeft_toRightOf="@+id/button20"/>

    <Button
        android:id="@+id/button22"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button21"
        app:layout_constraintLeft_toRightOf="@+id/button21"/>

    <Button
        android:id="@+id/button00"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button01"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/x"
        android:text="@string/x_turn"
        android:textAlignment="center"
        android:textColor="@color/DarkGrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:context=".MainActivity"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/restart"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="52dp"
        tools:layout_editor_absoluteY="52dp"
        tools:layout_editor_absoluteX="0dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="25dp"/>

    <Button
        android:id="@+id/score"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>

